--- a/javahelp/build.xml
+++ b/javahelp/build.xml
@@ -117,12 +117,13 @@ Microsystems, Inc. All Rights Reserved.
     <target name="javadoc" depends="init">
         <!-- Ant 1.4 bug workaround: <property refid="..."/> does not work inside <ant> -->
         <property name="_cp" refid="cp"/>
-        <ant dir="../../nbbuild" antfile="template.xml" target="javadoc">
+        <ant dir="../../nbbuild/javadoctools" antfile="template.xml" target="javadoc">
             <property name="javadoc.base" location="."/>
             <property name="javadoc.name" value="JavaHelpAPI"/>
             <property name="javadoc.title" value="JavaHelp Integration API"/>
             <property name="javadoc.packages" value="org.netbeans.api.javahelp"/>
             <property name="javadoc.classpath" value="${_cp}"/>
+            <property name="javadoc.arch" location="../arch/arch-core-javahelp.xml"/>
         </ant>
     </target>
 
