--- a/settings/build.xml
+++ b/settings/build.xml
@@ -90,13 +90,15 @@ Microsystems, Inc. All Rights Reserved.
               tofile="javadoc/SettingsAPI/org/netbeans/spi/settings/doc-files/properties-1_0.dtd"/>
         <!-- Ant 1.4 bug workaround: <property refid="..."/> does not work inside <ant> -->
         <property name="_cp" refid="cp"/>
-        <ant dir="../../nbbuild" antfile="template.xml" target="javadoc">
+        <ant dir="../../nbbuild/javadoctools" antfile="template.xml" target="javadoc">
             <property name="javadoc.base" location="."/>
             <property name="javadoc.name" value="SettingsAPI"/>
             <property name="javadoc.title" value="Settings API"/>
             <property name="javadoc.packages" value="org.netbeans.spi.settings"/>
             <property name="javadoc.classpath" value="${_cp}"/>
             <property name="javadoc.main.page" value="org/netbeans/spi/settings/doc-files/api.html"/>
+            <property name="javadoc.apichanges" location="api/doc/changes/apichanges.xml"/>
+            <property name="javadoc.arch" location="../../openide/arch/arch-openide-settings.xml"/>
         </ant>
     </target>
     
