Issue #31323 fixed. Accessible description added to "Depends on" customizer.

--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/nodes/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/nodes/Bundle.properties
@@ -112,3 +112,5 @@ HINT_task_taskname=Name to display when logging, etc. Defaults to taskdef name.
 # AntTargetChildren
 # {0} - XML element name
 ERR_no_such_task_or_type=No known task or type named <{0}>.
+
+AD_DependsEditor=N/A
