bugfix#28657 - new warning messages in in case there are left unresolved conflicts and user chooses OK

--- a/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
+++ b/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
@@ -83,3 +83,9 @@ BTN_Help_Mnemonic=H
 ACS_BTN_HelpA11yDesc=Show help for this dialog.
 
 CloseAction=Close
+
+SaveFileWarningQuestion=File {0} is modified but there still are confilcts. Save it?
+
+SaveFilesWarningQuestion={0} files are modified but there are unresolved conflicts. Save them?
+
+WarningQuestion=Conflicts are not resolved. Close vizualizer anyway?
