Correcting the location of the bundled tomcat module file.
This fixes inclusion of the monitor server-side files in the bundled Tomcat installation in NetBeans, which was broken by the previous commit.

--- a/web.monitor/build.xml
+++ b/web.monitor/build.xml
@@ -133,7 +133,7 @@ Microsystems, Inc. All Rights Reserved.
 
   <target name="bundled-tomcat-check">
     <available property="tomcat-bundled" 
-    file="${nb_root}/tomcatint/netbeans/tomcat40-bundled.jar.jar"/>
+    file="${nb_root}/tomcatint/bundledtomcat/netbeans/modules/tomcat40-bundled.jar"/>
   </target>
 
   <target name="compile"
