#31144: Fastjavac kicked out to a separate module; the module is part of the `stable' moduleconfig.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -140,6 +140,7 @@ config.modules.stable=${config.modules.slim}, \
         i18n, \
         j2eeserver, \
         jarpackager, \
+	java/fastjavac, \
         javacvs, \
         jndi, \
         monitor, \
