Separated APIs to supported and unsupported. Added vcsgeneric/profiles/clearcase to daily-alpha-nbms configuration

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -249,6 +249,7 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         testtools, \
         translatedfiles, \
         treefs, \
+        vcsgeneric/profiles/clearcase, \
         webl, \
         xml/tree-edit, \
         xtest
@@ -261,6 +262,7 @@ javadoc.packages=org.netbeans.api.*, \
         org.netbeans.spi.*
 # take care of dependencies when reordering modules for javadoc
 # some javadocs must be built earlier than others for package-list
+# the javadocs will be built in the *exact* order specified here
 config.fixedmodules.javadoc=openide, \
         openide/compiler, \
         openide/execution, \
@@ -273,8 +275,6 @@ config.fixedmodules.javadoc=openide, \
         diff, \
         java/api, \
         java/srcmodel, \
-        jemmy, \
-        jellytools, \
         debuggercore/oldapi, \
         lexer, \
         openidex/looks, \
@@ -282,7 +282,8 @@ config.fixedmodules.javadoc=openide, \
         vcscore, \
         xml/api, \
 	tasklist/api
-config.modules.javadoc=
+config.modules.javadoc=jemmy, \
+        jellytools
 
 # configuration for signature test builds
 config.fixedmodules.sigtest=${config.fixedmodules.stable}
@@ -291,7 +292,7 @@ config.modules.sigtest=${config.modules.stable}, \
         openidex/looks
 
 
+# module config for simple build of all xml modules
 config.modules.xml=${local.config.xml}, \
         xml/tree-edit
 config.fixedmodules.xml=
-#${config.fixedmodules.platform}
