--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -126,7 +126,7 @@ MSG_ERR_WRITING_TO_PROPERTY=Failed to write the value to the property \"{0}\".
 
 # formatting of a status line text shown during the opening of the form
 # {0} = name of the form data object
-FMT_OpeningForm=Opening Form: {0} ...
+FMT_OpeningForm=Opening Form: {0}
 
 # error notifications shown when some errors/warnings occur during form loading
 FMT_ERR_PersistenceManagerInstantiation=Cannot instantiate persistence manager:\n {0}
