--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -99,7 +99,7 @@ LBL_generator_progress_title=Unit tests generation in progress ...
 LBL_execute_progress_title=Unit tests execution in progress ...
 PROP_cfgcreate_enabled=Show Test Create Configuration
 HINT_cfgcreate_enabled=Show Test Create Configuration
-PROP_cfgexec_enabled=Show Test Execute Configurtaion
+PROP_cfgexec_enabled=Show Test Execute Configuration
 HINT_cfgexec_enabled=Show Test Execute Configuration
 PROP_executor_type=Executor for tests
 HINT_executor_type=Executor for tests
