--- a/j2eeserver/build.xml
+++ b/j2eeserver/build.xml
@@ -164,7 +164,7 @@ Microsystems, Inc. All Rights Reserved.
       <classpath>
         <pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
         <pathelement location="${nbroot}/openide/netbeans/lib/openide.jar"/>
-        <pathelement location="${nbroot}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="${nbroot}/core/javahelp/netbeans/modules/autoload/javahelp-api.jar"/>
         <pathelement location="../openide/compiler/netbeans/modules/autoload/openide-compiler.jar"/>
         <pathelement location="../openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
         <pathelement location="../openide/io/netbeans/modules/autoload/openide-io.jar"/> <!-- used indirectly, not imported -->
