options dialog name fix

--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -97,8 +97,7 @@ LBL_generator_status_creating=Creating:
 LBL_generator_status_scanning=Scanning: 
 LBL_generator_progress_title=Unit tests generation in progress ...
 LBL_execute_progress_title=Unit tests execution in progress ...
-PROP_cfgcreate_enabled=Show Test Create Configuration
-HINT_cfgcreate_enabled=Show Test Create Configuration
+
 PROP_cfgexec_enabled=Show Test Execute Configuration
 HINT_cfgexec_enabled=Show Test Execute Configuration
 PROP_executor_type=Executor for tests
@@ -252,7 +251,8 @@ JUnitCfgOfCreate.chkEnabled.text=\ Show Create Tests Configuration Dialog
 JUnitCfgOfCreate.chkEnabled.mne=W
 JUnitCfgOfCreate.chkEnabled.toolTip=Show this dialog next time when tests will be created.
 JUnitCfgOfCreate.chkEnabled.AD=Show Create Tests Configuration Dialog
-
+PROP_cfgcreate_enabled=Show Create Tests Configuration Dialog
+HINT_cfgcreate_enabled=Show Create Tests Configuration Dialog
 
 # Generate main method
 PROP_generate_main_method=Generate main Method
