a couple of more fixes

--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -100,8 +100,8 @@ LBL_execute_progress_title=Unit tests execution in progress ...
 
 PROP_cfgexec_enabled=Show Test Execute Configuration
 HINT_cfgexec_enabled=Show Test Execute Configuration
-PROP_executor_type=Executor for tests
-HINT_executor_type=Executor for tests
+PROP_executor_type=Executor for Tests
+HINT_executor_type=Executor for Tests
 PROP_junit_runner=Test runner class
 HINT_junit_runner=Test runner
 HINT_executor=This executor executes classes, that implement Test interface
@@ -257,8 +257,8 @@ HINT_cfgcreate_enabled=Show Create Tests Configuration Dialog
 # Generate main method
 PROP_generate_main_method=Generate main Method
 HINT_generate_main_method=Generate main Method
-PROP_generate_main_method_body=Body of the main method
-HINT_generate_main_method_body=Body of the main method
+PROP_generate_main_method_body=Body of the main Method
+HINT_generate_main_method_body=Body of the main Method
 PROP_generate_main_method_body_default_value=junit.textui.TestRunner.run(suite());
 
 # Generate tests from test classes
