--- a/xml.text/src/org/netbeans/modules/xml/text/completion/Bundle.properties
+++ b/xml.text/src/org/netbeans/modules/xml/text/completion/Bundle.properties
@@ -9,19 +9,21 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 # Microsystems, Inc. All Rights Reserved.
 
+## XMLCompletionQuery.java
 #0 represents filtering prefix
 MSG_result=Result of {0}*:
 MSG_encoding_comp=Suggested encodings:
+BK0002=Cannot suggest.
+BK0003=No suggestion.
 
+## GrammarManager.java
 MSG_loading=Loading XML document grammar...
-
 MSG_loading_done=XML document grammar loaded.
-
 MSG_loading_failed=Cannot load XML document grammar.
-
 MSG_loading_cancel=XML document grammar invalidated.
 
-##NodeSelector.java
+
+## NodeSelector.java
 BK0001=<Cannot access the value>
 
 ## ---
