some more fixes ...

--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -113,8 +113,8 @@ MSG_testsuite_class_for_root_package_not_found=Suite class "{0}" for root packag
 MSG_execution_failed=Test execution has failed.
 
 # executors
-LBL_executor_internal=Internal Execution
-LBL_executor_external=External Execution
+LBL_executor_internal=Internal
+LBL_executor_external=External
 LBL_executor_debugger=Debugger
 
 # TestCreator
@@ -322,7 +322,7 @@ JUnitCfgOfCreate.cmdMount.mne=M
 
 
 # manifest.mf
-OpenIDE-Module-Name: JUnit tests
-OpenIDE-Module-Display-Category: TestTools
-OpenIDE-Module-Short-Description: Creates and executes tests suitable for JUnit framework.
-OpenIDE-Module-Long-Description: JUnit module allows you to create and execute test classes suitable for JUnit framework.
+OpenIDE-Module-Name=JUnit tests
+OpenIDE-Module-Display-Category=TestTools
+OpenIDE-Module-Short-Description=Creates and executes tests suitable for JUnit framework.
+OpenIDE-Module-Long-Description=JUnit module allows you to create and execute test classes suitable for JUnit framework.
