--- a/junit/build.xml
+++ b/junit/build.xml
@@ -19,7 +19,9 @@ Microsystems, Inc. All Rights Reserved.
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
 
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
-
+  <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="../nbbuild/nbantext.jar"/>
+  <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
+  
   <property name="build.compiler.deprecation" value="off"/>
   <property name="build.compiler.debug" value="off"/>  
 
@@ -57,29 +59,41 @@ Microsystems, Inc. All Rights Reserved.
     <mkdir dir="netbeans/modules/ext"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-    <jar jarfile="netbeans/modules/junit.jar"
+    <locjar jarfile="netbeans/modules/junit.jar"
             manifest="manifest-subst.mf"
             basedir="src"
             excludesfile="../nbbuild/standard-jar-excludes.txt"
             compress="false"
 	    includes="org/netbeans/modules/junit/**"
             excludes="org/netbeans/modules/junit/testrunner/**">
-    </jar>
-    <jar jarfile="netbeans/modules/ext/junit-testrunner.jar"
+    </locjar>
+    <locjar jarfile="netbeans/modules/ext/junit-testrunner.jar"
             basedir="src"
             excludesfile="../nbbuild/standard-jar-excludes.txt"
             compress="false"
 	    includes="org/netbeans/modules/junit/testrunner/**">            
-    </jar>
+    </locjar>
   </target>
 
   <target name="javahelp">
     <!-- XXX consider running jhindexer too -->
-    <mkdir dir="netbeans/modules/docs"/>
-    <jar jarfile="netbeans/modules/docs/junit-module-help.jar"
-    	basedir="javahelp"
-    	excludesfile="../nbbuild/standard-jar-excludes.txt">
-    </jar>
+    <mkdir dir="javahelp/org/netbeans/modules/junit/docs/JavaHelpSearch"/>
+    <jhindexer basedir="javahelp/org/netbeans/modules/junit/docs/"
+               db="javahelp/org/netbeans/modules/junit/docs/JavaHelpSearch">
+      <classpath>
+        <fileset dir="../nbbuild/external">
+          <include name="jhall*.jar"/>
+        </fileset>
+      </classpath>
+      <include name="**/*.html"/>
+      <exclude name="JavaHelpSearch/"/>
+    </jhindexer>
+    <mkdir dir="javahelp/org/netbeans/modules/usersguide"/>
+    <copy file="../usersguide/javahelp/org/netbeans/modules/usersguide/ide.css" tofile="javahelp/org/netbeans/modules/usersguide/ide.css"/>
+    <mkdir dir="netbeans/modules/docs"/>    
+    <locjar jarfile="netbeans/modules/docs/junit-module-help.jar" compress="true">
+    	<fileset dir="javahelp" excludesfile="../nbbuild/standard-jar-excludes.txt" excludes="org/netbeans/modules/usersguide/"/>
+    </locjar>
     
   </target>
   
@@ -129,6 +143,8 @@ Microsystems, Inc. All Rights Reserved.
     <delete dir="netbeans"/>
     <delete file="junit.nbm"/>
     <delete dir="Info"/>
+    <delete dir="javahelp/org/netbeans/modules/junit/docs/JavaHelpSearch"/>	
+    <delete dir="javahelp/org/netbeans/modules/usersguide"/>
   </target>
 
   <target name="test" depends="netbeans">
