${javadoc.docfiles} now has a more intuitive default value. Also some other random fixes in the nbbuild/javadoctools/ system.

--- a/openide.execution/build.xml
+++ b/openide.execution/build.xml
@@ -76,6 +76,7 @@ Microsystems, Inc. All Rights Reserved.
             <property name="javadoc.classpath" value="${_cp}"/>
             <property name="javadoc.main.page" value="org/openide/execution/doc-files/api.html"/>
             <property name="javadoc.arch" location="../arch/arch-openide-execution.xml"/>
+            <property name="javadoc.docfiles" location="api/doc"/>
         </ant>
     </target>
   
