--- a/javahelp/build.xml
+++ b/javahelp/build.xml
@@ -124,6 +124,7 @@ Microsystems, Inc. All Rights Reserved.
             <property name="javadoc.packages" value="org.netbeans.api.javahelp"/>
             <property name="javadoc.classpath" value="${_cp}"/>
             <property name="javadoc.arch" location="../arch/arch-core-javahelp.xml"/>
+            <property name="javadoc.docfiles" location="api/doc"/>
         </ant>
     </target>
 
