--- a/o.apache.tools.ant.module/build.xml
+++ b/o.apache.tools.ant.module/build.xml
@@ -8,7 +8,7 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2003 Sun
 Microsystems, Inc. All Rights Reserved.
 
 Contributor(s): Jayme C. Edwards, Jesse Glick.
@@ -29,24 +29,26 @@ Contributor(s): Jayme C. Edwards, Jesse Glick.
   <target name="init">
     <ant dir="external" target="unscramble"/>
   </target>
+  
+  <path id="cp">
+    <pathelement location="../openide/openide-13javac-workaround.jar"/>
+    <pathelement location="../openide/netbeans/lib/openide.jar"/>
+    <pathelement location="../openide/compiler/netbeans/modules/autoload/openide-compiler.jar"/>
+    <pathelement location="../openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
+    <pathelement location="../openide/io/netbeans/modules/autoload/openide-io.jar"/>
+    <fileset dir="external">
+      <include name="ant-1.5.1.jar"/>
+    </fileset>
+    <fileset dir="../core/external">
+      <include name="xml-apis*.jar"/>
+      <include name="xerces*.jar"/>
+    </fileset>
+    <pathelement location="../core/javahelp/netbeans/modules/autoload/javahelp-api.jar"/>
+  </path>
 
   <target name="compile" depends="init">
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
-      <classpath>
-        <pathelement location="../openide/openide-13javac-workaround.jar"/>
-        <pathelement location="../openide/netbeans/lib/openide.jar"/>
-        <pathelement location="../openide/compiler/netbeans/modules/autoload/openide-compiler.jar"/>
-        <pathelement location="../openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
-        <pathelement location="../openide/io/netbeans/modules/autoload/openide-io.jar"/>
-        <fileset dir="external">
-          <include name="ant-1.5.1.jar"/>
-        </fileset>
-        <fileset dir="../core/external">
-          <include name="xml-apis*.jar"/>
-          <include name="xerces*.jar"/>
-        </fileset>
-        <pathelement location="../core/javahelp/netbeans/modules/autoload/javahelp-api.jar"/>
-      </classpath>
+      <classpath refid="cp"/>
     </javac>
   </target>
 
@@ -247,65 +249,18 @@ After that you should be done!
 </echo>
   </target>
 
-    <target name="apichanges-check" description="Check syntax of API changes list. Requires Ant 1.4!">
-        <xmlvalidate file="api/doc/changes/apichanges.xml" failonerror="true"/>
+    <target name="javadoc" description="Build Javadoc.">
+        <!-- Ant 1.4 bug workaround: <property refid="..."/> does not work inside <ant> -->
+        <property name="_cp" refid="cp"/>
+        <ant dir="../nbbuild/javadoctools" antfile="template.xml" target="javadoc">
+            <property name="javadoc.base" location="."/>
+            <property name="javadoc.name" value="AntModuleAPI"/>
+            <property name="javadoc.title" value="Ant Module API"/>
+            <property name="javadoc.packages" value="org.apache.tools.ant.module.api,org.apache.tools.ant.module.spi"/>
+            <property name="javadoc.classpath" value="${_cp}"/>
+            <property name="javadoc.apichanges" location="api/doc/changes/apichanges.xml"/>
+            <!-- XXX: <property name="javadoc.arch" location="arch/arch-ant.xml"/>-->
+        </ant>
     </target>
-    <target name="apichanges-generate" description="Regenerate HTML from XML API changes list.">
-        <style in="api/doc/changes/apichanges.xml" out="www/apichanges.html" destdir="www" style="../openide/api/doc/changes/apichanges.xsl"/>
-    </target>
-
-    <target name="ant-module-javadoc">
-        <property name="jdk-docs-location" value="http://java.sun.com/j2se/1.3/docs/api"/>
-        <property name="openide-docs-location" value="http://www.netbeans.org/download/apis/"/>
-        <echo message="Build Ant API documentation..."/>
-        <delete dir="AntAPIs"/>
-        <mkdir dir="AntAPIs"/>
-        <javadoc destdir="AntAPIs"
-             packagenames="org.netbeans.api.*,org.netbeans.spi.*,org.apache.tools.ant.module.api.*,org.apache.tools.ant.module.spi.*"
-             doctitle="NetBeans module ant APIs"
-             use="true"
-             splitindex="true"
-             author="false"
-             version="false"
-             maxmemory="64m"
-        >
-          <sourcepath>
-            <pathelement location="src"/>
-          </sourcepath>
-          <classpath>
-            <pathelement location="../openide/openide-13javac-workaround.jar"/>
-            <fileset dir="../openide/netbeans/lib">
-              <include name="openide*.jar" />
-            </fileset>
-            <fileset dir="external">
-              <include name="ant.jar"/>
-              <include name="ant-1.5.1.jar"/>
-            </fileset>
-            <fileset dir="../core/external">
-              <include name="xml-apis*.jar"/>
-              <include name="xerces*.jar"/>
-            </fileset>
-            <pathelement location="../core/javahelp/netbeans/modules/autoload/javahelp-api.jar"/>
-          </classpath>
-          <link href="${jdk-docs-location}"
-                offline="true"
-                packagelistLoc="${nbroot}/openide/api/doc"
-          />
-          <link href="${openide-docs-location}"
-                offline="true"
-                packagelistLoc="api/doc/openide"
-          />
-        </javadoc>
-        <zip zipfile="AntAPIs.zip" basedir="AntAPIs"/>
-    </target>
-
-    <target name="javadoc" depends="ant-module-javadoc">
-      <copy todir="javadoc">
-        <fileset dir=".">
-          <include name="AntAPIs/**"/>
-          <include name="AntAPIs.zip"/>
-        </fileset>
-      </copy>
-    </target>
-
+  
 </project>
