--- a/web.core/src/org/netbeans/modules/web/core/Bundle.properties
+++ b/web.core/src/org/netbeans/modules/web/core/Bundle.properties
@@ -92,10 +92,10 @@ that you view web pages using an external browser such as Netscape.
 # WebExecUtil
 MSG_no_descriptor_found=There is no browser configured for MIME type {0}.
 
-TXT_wrongURI=The URI string "{0}" doesn''t fulfill the URI syntax.
-TXT_endsWithSlash=The URI string shouldn''t end with the slash character.
+TXT_wrongURI=The URI string "{0}" doesn\'\'t fulfill the URI syntax.
+TXT_endsWithSlash=The URI string shouldn\'t end with the slash character.
 TXT_notStartsWithSlash=The URI string should start with the slash character.
-TXT_startsWithDoubleSlash=The URI string shouldn''t start with the double slash character.
+TXT_startsWithDoubleSlash=The URI string shouldn\'t start with the double slash character.
 
 #CompilationMessagePanel
 CTL_CompilationMessage=The web server you have selected does not support compiling JSPs from the IDE, therefore, the "Compile" and "View Servlet" actions for JSP pages will be disabled.
