--- a/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
@@ -55,8 +55,9 @@ PROP_rootElementName=Root Element:
 
 ## GenerateDTDSupport.java
 MSG_use_dtd_as_document_type?=Do you want to use generated DTD as external document type?
-#do not localize "<!---"  and "-->" strings
-FMT_DTDDoc=<!--- Put your DTDDoc comment here. -->
+FMT_DTDDoc=Put your DTDDoc comment here.
+BK0009=Cannot proceed! The document contains syntax errors:
+BK0010=An example how to use this DTD from your XML document:
 
 ## SAXGeneratorFilePanel.java
 MSG_file_err_1=Valid Java class name expected.
