bugfix#31639 - fixed problem with accessible desc for chooser dialog

--- a/diff/src/org/netbeans/modules/diff/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/Bundle.properties
@@ -67,3 +67,5 @@ MSG_DiffFailed=Diff failed for {0} and {1}.
 MSG_NoDiffVisualizer=No Diff Visualizer is registered in the system.
 MSG_NoDiffProvider=No Diff Engine is registered in the system.
 
+
+ACSD_PatchDialog=This dialog allows you to choose patch
