Added rmi, jndi and scripting to daily-alpha-nbms configuration

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -227,6 +227,7 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         jellytools, \
         jemmy, \
         jemmysupport, \
+        jndi, \
         junit, \
         lexer, \
         lexer/editorbridge, \
@@ -238,7 +239,9 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         objectbrowser, \
         openidex/looks, \
         remotefs, \
+        rmi, \
         serialversion, \
+        scripting, \
         sysprops, \
         ${local.config.tasklist}, \
         testtools, \
