#30819: removing dependencies on openide-deprecated.

--- a/form/src/org/netbeans/modules/form/editors/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/editors/Bundle.properties
@@ -32,3 +32,28 @@ ACSD_KeyStrokeCustomEditor=N/A
 
 # EnumEditor
 CTL_EnumEditorName=Enumeration
+
+#StringArrayCustomEditor
+CTL_Empty=<empty>
+CTL_Item=Item:
+CTL_Item_Mnemonic=I
+ACSD_CTL_Item=N/A
+CTL_ItemList=Item List
+CTL_ItemList_Mnemonic=L
+ACSD_CTL_ItemList=N/A
+CTL_Add_StringArrayCustomEditor=Add
+CTL_Add_StringArrayCustomEditor_Mnemonic=A
+ACSD_CTL_Add_StringArrayCustomEditor=N/A
+CTL_Change_StringArrayCustomEditor=Edit
+CTL_Change_StringArrayCustomEditor_Mnemonic=E
+ACSD_CTL_Change_StringArrayCustomEditor=N/A
+CTL_Remove=Remove
+CTL_Remove_Mnemonic=R
+ACSD_CTL_Remove=N/A
+CTL_MoveUp=Up
+CTL_MoveUp_Mnemonic=U
+ACSD_CTL_MoveUp=N/A
+CTL_MoveDown=Down
+CTL_MoveDown_Mnemonic=w
+ACSD_CTL_MoveDown=N/A
+ACSD_StringArrayCustomEditor=N/A
