Fix of bug #26999: hardcoded Ctrl, Alt and Shift internationalized.

--- a/form/src/org/netbeans/modules/form/editors/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/editors/Bundle.properties
@@ -23,6 +23,12 @@ CTL_VirtualKey=Virtual Key:
 CTL_VirtualKey_Mnemonic=V
 CTL_KeyStroke=Key Stroke:
 CTL_KeyStroke_Mnemonic=K
+CTL_Ctrl=Ctrl
+CTL_Ctrl_Mnemonic=C
+CTL_Alt=Alt
+CTL_Alt_Mnemonic=l
+CTL_Shift=Shift
+CTL_Shift_Mnemonic=S
 ACSD_VirtualKey=N/A
 ACSD_KeyStroke=N/A
 ACSD_CtrlKey=N/A
