--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -761,6 +761,8 @@ ConnectDialogPassword = Password:
 ConnectDialogPassword_Mnemonic = P
 ConnectDialogRememberPassword = Remember password during this session
 ConnectDialogRememberPassword_Mnemonic = R
+ACS_ConnectDialogA11yName = Database connect
+ACS_ConnectDialogA11yDesc = Database connect dialog
 Product = Product
 Product_Mnemonic = O
 
