ACSD for help dialog.

--- a/javahelp/src/org/netbeans/modules/javahelp/Bundle.properties
+++ b/javahelp/src/org/netbeans/modules/javahelp/Bundle.properties
@@ -31,6 +31,7 @@ TITLE_loading_help_sets=Loading help sets...
 LBL_parsing_help_sets=Parsing help sets...
 LBL_merging_help_sets=Merging help sets...
 ACSD_JavaHelp_viewer=Displays one or more online help references in JavaHelp format
+ACSD_Loading_Dialog=Loadintg help sets
 
 # HelpAction
 LBL_HelpAction=Help
