Typo in properties file

--- a/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
@@ -151,6 +151,8 @@ CTL_Empty=<empty>
 ACS_TextArea=Text:
 ACSD_TextArea=N/A
 ACSD_CustomStringEditor=N/A
+ACS_Instructions=Instructions
+ACSD_Instructions=N/A
 
 #ServiceTypeEditor + exec
 LAB_DefaultServiceType=Default
@@ -293,3 +295,8 @@ CTL_MoveDown=Down
 CTL_MoveDown_Mnemonic=w
 ACSD_CTL_MoveDown=N/A
 ACSD_StringArrayCustomEditor=N/A
+
+#Bool/BooleanEditor
+TRUE=true
+FALSE=false
+NULL=null
