Fixed issue #31256 - A11Y fixes

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -576,6 +576,7 @@ ExecuteButton_Mnemonic = E
 FetchDataTitle = Fetch Data
 ShowDataError = Unable to show data, {0}
 
+ACS_DataViewWindowA11yDesc = Command editor window
 ACS_DataViewCancelButtonA11yDesc = No
 ACS_DataViewNextFetchButtonA11yDesc = Yes
 ACS_DataViewAllFetchButtonA11yDesc = Fetch all
