--- a/diff/src/org/netbeans/modules/diff/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/Bundle.properties
@@ -1,10 +1,10 @@
 #                 Sun Public License Notice
-# 
+#
 # The contents of this file are subject to the Sun Public License
 # Version 1.0 (the "License"). You may not use this file except in
 # compliance with the License. A copy of the License is available at
 # http://www.sun.com/
-# 
+#
 # The Original Code is NetBeans. The Initial Developer of the Original
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
 # Microsystems, Inc. All Rights Reserved.
@@ -43,6 +43,7 @@ EXC_PatchApplicationFailed=Application of the patch to ''{1}'' failed: {0}
 EXC_CopyOfAppliedPatchFailed=The patch application failed, it's not possible to write to {0}.
 MSG_NotFoundFiles=Following files are to be patched, but not found: {0}
 MSG_PatchAppliedSuccessfully=Patch applied successfully. View applied changes?
+MSG_PatchAppliedPartially=Patch applied partially. View applied changes?
 
 # DiffSettingsBeanInfo
 PROP_diffService=Default Diff Service
